--- a/Muniba PRACTICE ASSSIGNMENT 3-checkpoint.ipynb
+++ b/Muniba PRACTICE ASSSIGNMENT 3-checkpoint.ipynb
@@ -259,15 +259,15 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "\"###### Make a python program that conatains your nine favourite dishes in a list called foods.\\n\",\n",
+    "\"Make a python program that conatains your nine favourite dishes in a list called foods.\\n\",\n",
     "    \"\\n\",\n",
-    "\"###### Print the message, The first three items in the list are:. \\n\",\n",
-    "\"###### Then use a slice to print the first three items from that program’s list.\\n\",\n",
+    "\" Print the message, The first three items in the list are:. \\n\",\n",
+    "\"Then use a slice to print the first three items from that program’s list.\\n\",\n",
     "    \"\\n\",\n",
-    "\"###### Print the message, Three items from the middle of the list are:\\n\",\n",
-    "\"###### Use a slice to print three items from the middle of the list.\\n\",\n",
+    "\"Print the message, Three items from the middle of the list are:\\n\",\n",
+    "\"Use a slice to print three items from the middle of the list.\\n\",\n",
     "    \"\\n\",\n",
-    "\"###### Print the message, The last three items in the list are:"
+    "\"Print the message, The last three items in the list are:"
    ]
   },
   {
@@ -617,27 +617,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "key:    Nelum\n",
-      "Value:  Pakistan\n",
-      "key:    Ganga\n",
-      "Value:  India\n",
-      "key:    Kabul\n",
-      "Value:  Afghanistan\n"
+      "   *** Country River Names ***   \n",
+      "\tNelum: Pakistan\n",
+      "\tGanga: India\n",
+      "\tKabul: Afghanistan\n"
      ]
     }
    ],
    "source": [
     "river = {'Nelum': 'Pakistan','Ganga':'India','Kabul':'Afghanistan'}\n",
+    "print(\"   *** Country River Names ***   \")\n",
     "for key, value in river.items():\n",
-    "    print (\"key:   \",key)\n",
-    "    print (\"Value: \",value)\n"
+    "    print(f'\\t{key}: {value}')\n",
+    "    "
    ]
   },
   {
@@ -656,19 +655,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Pet_type': 'Dog', 'Owner_Name': 'Salman', 'Color': 'Brown'}\n",
+      "{'Pet_type': 'Hen', 'Owner_Name': 'Sadia', 'Color': 'White'}\n",
+      "{'Pet_type': 'Cat', 'Owner_Name': 'Fahad', 'Color': 'Black'}\n"
+     ]
+    }
+   ],
    "source": [
-    "dog = {}"
+    "Dog = {'Pet_type':'Dog','Owner_Name':'Salman','Color':'Brown'}\n",
+    "Hen = {'Pet_type':'Hen','Owner_Name':'Sadia','Color':'White'}\n",
+    "Cat = {'Pet_type':'Cat','Owner_Name':'Fahad','Color':'Black'}\n",
+    "Pets = [Dog,Hen,Cat]\n",
+    "for i in Pets:\n",
+    "    print(i)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pet_type: Dog\n",
+      "Owner_Name: Salman\n",
+      "Color: Brown\n",
+      "\n",
+      "*******\n",
+      "Pet_type: Hen\n",
+      "Owner_Name: Sadia\n",
+      "Color: White\n",
+      "\n",
+      "*******\n",
+      "Pet_type: Cat\n",
+      "Owner_Name: Fahad\n",
+      "Color: Black\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key,val in Dog.items():\n",
+    "    print(key +    \": \"  +val)\n",
+    "print(\"\\n*******\")\n",
+    "for key,val in Hen.items():\n",
+    "    print(key +    \": \"  +val)\n",
+    "print(\"\\n*******\")\n",
+    "for key,val in Cat.items():\n",
+    "    print(key +    \": \"  +val)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
